tests/cases/smoke/valid/brace_blocks.dp
var result = 0
if true {
    result = 1
} else {
    result = 2
}
