tests/cases/smoke/invalid/control_truthiness_while.dp
var count = 1
while count {
    count = count - 1
}
